--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
           <td class="skills container">
             <h2 class="skill_title title">SKILLS</h2>
             <ul class="list">
-              <li>Front End Coding</li>
-              <li>UI design using Figma</li>
+              <li>HTML, CSS & JavaScript</li>
+              <li>ReactJS</li>
+              <li>Bootstrap & Tailwind CSS</li>
+              <li>NextJS/Typescript</li>
               <li>Problem Solving</li>
               <li>Computer Literacy</li>
               <li>MS Excel Macro</li>
