--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
               </li>
               <li class="contact_item">
                 <a href="#">
-                  <i class="ri-map-pin-fill"></i> Brgy. San Felipe Naga City,
-                  Cam Sur, 4400
+                  <i class="ri-map-pin-fill"></i> Naga City, Cam Sur, 4400
                 </a>
               </li>
               <li class="contact_item">
@@ -50,8 +49,12 @@
           <td class="profile container">
             <h2 class="profile_title title">PROFILE</h2>
             <p>
-              Hello, I'm Daniel, a passionate web developer with a love for
-              creating clean, functional, and user-friendly websites.
+              A passionate Junior Web Developer experienced in developing a
+              user-friendly web application who is eager to learn and improve.
+              Proficient in a diverse range of technologies, including HTML/CSS,
+              JavaScript, ReactJS, NodeJS, Laravel and PHP. Demonstrates
+              effective self-management in independent projects and excels in
+              collaborative team environments.
             </p>
           </td>
         </tr>
@@ -82,8 +85,8 @@
         <tr class="row3">
           <td class="education container">
             <h2 class="educ_title title">EDUCATION</h2>
-            <h4>Secondary School</h4>
-            <p>Naga College Foundation<br />2005-2009</p>
+            <h4>KodeGo BootCamp</h4>
+            <p>Full Stack Web Development<br />Aug 2023-Nov 2023</p>
           </td>
           <td class="experience2 container">
             <h4>PAYMENT OFFICER</h4>
